Stable version updated and fixed